--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@testing-library/user-event": "^14.5.2",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "6.1.5",
-    "@testing-library/react": "14.1.2",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@types/jest": "29.5.11",
     "@types/react": "18.2.45",
     "jest": "29.7.0",
